--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -9,20 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module. \n",
-      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details.\n",
-      "<a href='https://aka.ms/kernelFailuresPyzmq'>Learn more</a>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
@@ -42,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"./Final Database - Final.csv\")"
+    "data = pd.read_csv(\"./Final-Database.csv\")"
    ]
   },
   {
@@ -66,19 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Video_Title', 'Channel_title', 'Publish_Time', 'tags', 'views',\n",
-       "       'Trending_NonTrending', 'likes', 'dislikes', 'comment_count',\n",
+       "Index(['Video_Title', 'No. of Characters', 'Channel_title', 'Publish_date',\n",
+       "       'Day', 'Time', 'Time category', 'views', 'tags', 'No. Of Words (Tags)',\n",
+       "       'No. Of Charcters (Tags)', 'T/NT', 'likes', 'dislikes', 'comment_count',\n",
        "       'Comment Disabled', 'Description'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
